--- a/spring_blog/src/main/resources/templates/jinhee/journey.html
+++ b/spring_blog/src/main/resources/templates/jinhee/journey.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div th:replace="Jinfragments/header :: headerFragment"></div>
+<div th:replace="~{Jinfragments/header :: headerFragment}"></div>
 
 <div class="container">
     <h2>Jin's Journey</h2>
@@ -33,7 +33,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-<div th:replace="Jinfragments/footer :: footerFragment"></div>
+<div th:replace="~{Jinfragments/footer :: footerFragment}"></div>
 
 </body>
 </html>
