--- a/spring_blog/src/main/resources/templates/jinhee/main.html
+++ b/spring_blog/src/main/resources/templates/jinhee/main.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-    <div th:insert="jinfragments/header :: headerFragment"></div>
+    <div th:insert="~{Jinfragments/header :: headerFragment}"></div>
 </header>
 
 <div class="main-img">
