--- a/spring_blog/src/main/resources/templates/jinhee/delete.html
+++ b/spring_blog/src/main/resources/templates/jinhee/delete.html
@@ -11,9 +11,11 @@
 
 <div class="container">
     <h2>Delete Blog</h2>
-    <p>Are you sure you want to delete this blog?</p>
+    <p>삭제하시겠습니까?</p>
     <form th:action="@{/jinhee/delete/confirm/{id}(id=${blogDTO.id})}" method="get">
-        <button type="submit" class="btn btn-danger">Delete</button>
+        <input type="hidden" name="confirm" value="true">
+        <button type="submit" class="btn btn-danger">삭제</button>
+        <a href="/jinhee/journey">취소</a>
     </form>
 </div>
 
