--- a/spring_blog/src/main/resources/templates/jinhee/edit.html
+++ b/spring_blog/src/main/resources/templates/jinhee/edit.html
@@ -11,17 +11,18 @@
 <div th:replace="Jinfragments/header :: headerFragment"></div>
 
 <div class="container">
-    <h2>Edit Blog</h2>
+    <h2>글 수정하기</h2>
     <form th:action="@{/jinhee/edit/{id}(id=${blogDTO.id})}" th:object="${blogDTO}" method="post">
         <div class="form-group">
-            <label for="blogTitle">Title:</label>
+            <label for="blogTitle">제목:</label>
             <input type="text" class="form-control" id="blogTitle" th:field="*{blogTitle}" required>
         </div>
         <div class="form-group">
-            <label for="blogContent">Content:</label>
+            <label for="blogContent">내용:</label>
             <textarea class="form-control" id="blogContent" th:field="*{blogContent}" rows="5" required></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Update</button>
+        <button type="submit" class="btn btn-primary">수정하기</button>
+        <a href="/jinhee/journey">취소</a>
     </form>
 </div>
 
