--- a/spring_blog/src/main/resources/templates/jinhee/postpage.html
+++ b/spring_blog/src/main/resources/templates/jinhee/postpage.html
@@ -2,22 +2,27 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="_csrf" th:content="${_csrf.token}"/>  <!-- CSRF 토큰 포함 -->
+
     <title>Post Page</title>
     <link rel="stylesheet" th:href="@{/Jincss/postpage.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script th:src="@{/js/likePost.js}"></script> <!-- likePost.js 파일을 추가 -->
 </head>
 <body>
 
-<div th:replace="Jinfragments/header :: headerFragment"></div>
+<div th:replace="~{Jinfragments/header :: headerFragment}"></div>
 
 <div class="container">
     <div class="title">
         <h2>블로그 제목: <span th:text="${blogTitle}">블로그 제목</span></h2>
         <div class="like-container">
-            <form th:action="@{/jinhee/postpage/{id}/like(id=${blogDTO.id})}" method="post">
-                <input type="image" src="/img/like.png" alt="Like Button" class="like-button">
-            </form>
-            <span class="like-count" th:text="${likeCount}">0</span>
+            <!-- 좋아요 버튼 -->
+            <button id="likeButton" type="button" th:attr="data-id=${blogDTO.id}" class="like-button">
+                <img src="/img/like.png" alt="Like Button">
+            </button>
+            <!-- 좋아요 수 표시 -->
+            <span id="likeCount" class="like-count" th:text="${likeCount}">0</span>
         </div>
     </div>
     <div class="content">
@@ -27,7 +32,10 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-<div th:replace="Jinfragments/footer :: footerFragment"></div>
+<div th:replace="~{Jinfragments/footer :: footerFragment}"></div>
+
+<!-- CSRF 토큰을 JavaScript로 전달 -->
+
 
 </body>
 </html>
