--- a/spring_blog/src/main/resources/templates/jinhee/postpage.html
+++ b/spring_blog/src/main/resources/templates/jinhee/postpage.html
@@ -2,9 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="_csrf" th:content="${_csrf.token}"/>  <!-- CSRF 토큰 포함 -->
-
-    <title>Post Page</title>
+        <title>Post Page</title>
     <link rel="stylesheet" th:href="@{/Jincss/postpage.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script th:src="@{/js/likePost.js}"></script> <!-- likePost.js 파일을 추가 -->
@@ -28,14 +26,23 @@
     <div class="content">
         <p>블로그 내용: <span th:text="${blogContent}">블로그 내용</span></p>
     </div>
+
+    <div class = "comment">
+        <h3>댓글</h3>
+        <form id="commentForm" class="comment">
+            <div class="commentBox">
+                <label for="commentText" class="form-label">댓글 내용</label>
+                <textarea class="form-control" id="commentText" name="commentText" rows="3" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">등록</button>
+        </form>
+    </div>
+
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 <div th:replace="~{Jinfragments/footer :: footerFragment}"></div>
-
-<!-- CSRF 토큰을 JavaScript로 전달 -->
-
 
 </body>
 </html>
